# mava-api

./: .gitignore  CITATION.cff  README.md  justfile  ontospy-mava.py  pyproject.toml
.github/actions/setup-nix/: action.yaml
.github/workflows/: checks.yaml  docs.yaml  format.yaml  normal.yaml  publish-docs  publish-docs.yaml
.gitlab/merge_request_templates/: Default.md
docs/: index.html  mkdocs.yml  openapi.json  root_index.html
docs/mkdocs/: api.md  concepts.md  index.md  install.md  ontology.md  openapi.yaml  roadmap.md  tools.md  usage.md
docs/ontology/: index.html
docs/overrides/: main.html
docs/owl/: index.html
docs/shacl/: index.html
examples/: export.ttl
examples/input/: annotations.tsv  corpus.ttl  input.csv  input2.ttl  map_annotations.json  map_series.json  map_timeline.json  observations.tsv
just/: api.just  ci.just
src/app/: main.py
src/ci/: build_ontology.py  validate_ontology.py
src/ci/checks/: shacl.py
src/ci/docs/: sparql.py
src/mava/: main.py  transform.py
src/mava/api/: graph.py
src/mava/graph/: builder.py
src/ontology/: mava-owl.ttl  mava.ttl
tests/: test_api.py  test_builder.py  test_version.py
tools/configs/copier/answers/: generic.yaml  python.yaml
tools/just/: api.just  ci.just  docs.just  test.just
tools/nix/: flake.nix
tools/nix/flake/: treefmt.parts.nix
tools/nix/shells/: toolchain.nix
tools/nix/toolchains/: toolchain-general.nix
tools/python/: requirements.txt
tools/python/docs/: sparql.py
tools/scripts/: generate-spec.py
